# llmoops-rag

./: .env  main.py  pyproject.toml
data/: agentic-ai.txt
multi_doc_chat/config/: config.yml
notebooks/: rag.ipynb
notebooks/faiss_index/: index.faiss  index.pkl
