[project]
name = "rag-lloops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "openai>=2.2.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
]
